Update PreConditions with requireNot / andNot API Update PreConditions boolean handling for better performance Update DemoCommand to fix bug on empty params validation Add GEMINI file for AI assistance context Add README file in 01-shapes module